--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nafiz portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1 class="name"> <span class="red">Nafiz Ahmed</span> World</h1>
+            <h3> I am a programmer and devloper</h3>
+            <p> Programmig is my hobby. I wanted to be a programmer from my childhood. Now I works at GOOGLE.I am a web
+                devloper
+                at google.if you wants to hire me then visit my page. Thank you</p>
+            <a class="link-button" href="https://www.linkedin.com" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width"><img src="images/jhankar.png" alt=""></div>
+    </section>
+
 </body>
+
 </html>
