--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
         </div>
         <div class="half-width"><img src="images/jhankar.png" alt=""></div>
     </section>
-
+    <section class="dream-big">
+        <div class="div">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="div">
+            <h1 class="my-dream"> My dream</h1>
+            <h2> Become a<span class="color"> web devloper</span> </h2>
+            <p>I am trying to be a web devloper.I am now in a course with JHANKAR MAHMUD sir . He is training us the web
+                devloping course. I think I can be a web devliper if i do hard work."there is nothing but without heard
+                work"</p>
+            <a class="link-button2" href="https://www.linkedin.com" target="_blank">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
