--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1 class="name"> <span class="red">Nafiz Ahmed</span> World</h1>
@@ -25,7 +25,7 @@
         </div>
         <div class="half-width"><img src="images/jhankar.png" alt=""></div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="div">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -38,6 +38,32 @@
             <a class="link-button2" href="https://www.linkedin.com" target="_blank">Download Resume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1 class="stack">Experiences</h1>
+        <div class="flexible-container">
+            <div id="full" class="experience-item">
+                <h1>Full Stack Devloper</h1>
+                <h3 class="orange">2024-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="font-end" class=" experience-item  ">
+                <h1>Front-End Devloper</h1>
+                <h3 class="orange">2022-2023 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+
+    </section>
 </body>
+<footer>
+    <p>© Nafiz Ahmed 2025, a Programming Hero initiative.</p>
+</footer>
 
 </html>
